<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_now_playing">

    <fragment
        android:id="@+id/navigation_now_playing"
        android:name="com.example.moviedb.ui.nowplaying.NowPlayingFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_now_playing" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.moviedb.ui.upcoming.UpcomingFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_top_rated"
        android:name="com.example.moviedb.ui.toprated.TopRatedFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_top_rated" />
</navigation>