<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical"
    tools:context=".detail.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_details"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:strokeColor="@color/black"
            app:shapeAppearanceOverlay="@style/roundedimageview"
            tools:src="@tools:sample/backgrounds/scenic"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/title_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/the_title"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textStyle="italic"/>

        <TextView
            android:id="@+id/overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/overview_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/the_overview"
            android:textColor="@color/black"
            android:maxLines="2"
            android:textSize="10sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_rating"/>

            <TextView
                android:id="@+id/rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"

                android:hint="4.5"
                android:textColor="@color/black"/>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_favorite"
            android:backgroundTint="@color/saphire"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Related Movie"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textSize="15dp"
            android:textColor="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_related_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/list_related_movie"/>

    </LinearLayout>

</LinearLayout>